# ric

./: CNAME  Cargo.toml  README.md  Shuttle.toml  docker-compose.yml  index.html  proj.html
assets/: rust.css  style.css
en/: config.html  cv.html  index.html  integracoes.html  milestones.html  profile.html  proj.html
pt/: cv.html  index.html  integracoes.html  milestones.html  perfil.html  pesquisar.html  proj.html  rust.html
src/: main.rs  routes.rs
view/: Currículo Ricardo da Rocha Vitor.md  index.html  proj.html
