[package]
name = "ric"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.3.1"
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.26.0"
tera = "1.20.0"
actix-files = "0.6.6"
shuttle-shared-db = { version = "0.53.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
